--- a/viewer.html
+++ b/viewer.html
@@ -20,14 +20,13 @@
 </head>
 <body>
   <model-viewer 
-    src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+    src="https://github.com/Gball7/3Dmodel/blob/90958a807b04cc22d7f15207830e3b77c7cfaff8/5floor.glb"
     alt="A 3D model of an astronaut"
     auto-rotate
     camera-controls
     shadow-intensity="1"
     exposure="1"
     ar
-    ios-src="https://modelviewer.dev/shared-assets/models/Astronaut.usdz">
   </model-viewer>
 </body>
 </html>
