--- a/viewer.html
+++ b/viewer.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <model-viewer 
-    src="https://github.com/Gball7/3Dmodel/blob/90958a807b04cc22d7f15207830e3b77c7cfaff8/5floor.glb"
+    src="5floor.glb"
     alt="A 3D model of an astronaut"
     auto-rotate
     camera-controls
