--- a/viewer.html
+++ b/viewer.html
@@ -8,25 +8,28 @@
     body {
       margin: 0;
       padding: 0;
-      overflow: hidden;
       background-color: #ffffff;
-    }
-    model-viewer {
-      width: 100vw;
       height: 100vh;
+      overflow: hidden;
+    }
+
+    model-viewer {
+      width: 100%;
+      height: 100%;
       background-color: #ffffff;
     }
   </style>
 </head>
 <body>
-  <model-viewer 
+  <model-viewer
     src="5floor.glb"
-    alt="A 3D model of an astronaut"
+    alt="3D model"
     auto-rotate
     camera-controls
     shadow-intensity="1"
-    exposure="1"
     ar
-  </model-viewer>
+    ar-modes="webxr scene-viewer quick-look"
+    autoplay
+  ></model-viewer>
 </body>
 </html>
