--- a/viewer2.html
+++ b/viewer2.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <model-viewer
-    src="5floor.glb"
+    src="residential_complex_modern_apartment_building.glb"
     alt="3D model"
     auto-rotate
     camera-controls
