--- a/viewer.html
+++ b/viewer.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <model-viewer
-    src="5floor.glb"
+    src="modern_luxury_villa_house_building_home.glb"
     alt="3D model"
     auto-rotate
     camera-controls
