--- a/viewer3.html
+++ b/viewer3.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <model-viewer
-    src="residential_complex_modern_apartment_building.glb"
+    src="3d_modern_house.glb"
     alt="3D model"
     auto-rotate
     camera-controls
