--- a/viewer3.html
+++ b/viewer3.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #ffffff;
+      background-color: #E0E3E7;
       height: 100vh;
       overflow: hidden;
     }
@@ -16,7 +16,7 @@
     model-viewer {
       width: 100%;
       height: 100%;
-      background-color: #ffffff;
+      background-color: #E0E3E7;
     }
   </style>
 </head>
