--- a/viewer2.html
+++ b/viewer2.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #ffffff;
+      background-color: #e0e3e7;
       height: 100vh;
       overflow: hidden;
     }
@@ -16,13 +16,13 @@
     model-viewer {
       width: 100%;
       height: 100%;
-      background-color: #ffffff;
+      background-color: #e0e3e7;
     }
   </style>
 </head>
 <body>
   <model-viewer
-    src="residential_complex_modern_apartment_building.glb"
+    src="blackstone_apartments.glb"
     alt="3D model"
     auto-rotate
     camera-controls
